feat : Implementation of ChangeLanguage

--- a/src/translations/fr/translation.json
+++ b/src/translations/fr/translation.json
@@ -107,7 +107,7 @@
       "title":"Ma boutique"
     },
     "language":{
-      "title":"Langue"
+      "title":"Changement de langue"
     }
   }
 }
