feat : set all reducers and possibility to get store crendetials in store.tsx

--- a/src/translations/en/translation.json
+++ b/src/translations/en/translation.json
@@ -104,7 +104,12 @@
   "settings": {
     "title": "Settings",
     "store":{
-      "title":"My store"
+      "title":"My store",
+      "status": {
+        "title":"StatuS",
+        "open":"Open",
+        "closed":"Closed"
+        }
     },
     "language":{
       "title":"Change Language"
