Changing order page logic to work with Order Id

--- a/src/translations/en/translation.json
+++ b/src/translations/en/translation.json
@@ -165,7 +165,7 @@
         "method":"Payment method"
       },
       "product":{
-        "title":"Product"
+        "title":"Products"
       },
       "save":{
         "button":"Save"
