--- a/src/translations/fr/translation.json
+++ b/src/translations/fr/translation.json
@@ -165,7 +165,7 @@
           "method":"Méthode de paiement"
         },
         "product":{
-          "title":"Produit"
+          "title":"Produits"
         },
         "save":{
           "button":"Enregistrer"
