--- a/src/translations/en/translation.json
+++ b/src/translations/en/translation.json
@@ -105,14 +105,35 @@
     "title": "Settings",
     "store":{
       "title":"My store",
+      "modify":"Modify",
+      "modifyError":"Error : Some fields are incorrect",
+      "modifySuccess":"Your store has been successfully modified",
       "status": {
-        "title":"StatuS",
+        "title":"Status of my store",
         "open":"Open",
         "closed":"Closed"
         }
     },
     "language":{
       "title":"Change Language"
+    },
+    "disponibility": {
+      "title": "Disponibilities",
+      "day" : "Day",
+      "openHour": "Open",
+      "closeHour": "Closing",
+      "errorFormat": "Incorrect format (hh:mm)",
+      "errorOrder": "Wrong order of hours",
+      "days":{
+        "MONDAY": "Monday",
+        "TUESDAY": "Tuesday",
+        "WEDNESDAY": "Wednesday",
+        "THURSDAY": "Thursday",
+        "FRIDAY": "Friday",
+        "SATURDAY": "Saturday",
+        "SUNDAY": "Sunday"
+      }
     }
+
   }
 }
