--- a/src/translations/fr/translation.json
+++ b/src/translations/fr/translation.json
@@ -55,6 +55,22 @@
         "used": "Ce courriel est déjà utilisé"
       }
     },
+    "category": {
+      "placeholder": "Entrez la catégorie de votre boutique",
+      "title": "Catégorie",
+      "errorMessage": "Le champ de la catégorie ne peut pas être vide",
+      "categories": {
+        "FRUITS_AND_VEGETABLES": "Fruits et légumes",
+        "FISH_AND_SEAFOOD": "Poissons et fruits de mer",
+        "HEALTHY": "Produits santé",
+        "KETO": "Keto",
+        "BAKERY": "Boulangerie",
+        "WORLD_PRODUCTS": "Produits du monde",
+        "BUTCHER": "Boucherie",
+        "OTHER": "Autre"
+      },
+      "notFound": "Pas de catégorie trouvée"
+    },
     "phone": {
       "placeholder": "Entrez le téléphone de votre boutique",
       "title": "Téléphone de la boutique",
