On peut mtn fermer la boutique pour un jour donné

--- a/src/translations/en/translation.json
+++ b/src/translations/en/translation.json
@@ -168,7 +168,8 @@
       "FRIDAY": "Friday",
       "SATURDAY": "Saturday",
       "SUNDAY": "Sunday"
-    }
+    },
+    "closed": "CLOSED"
   },
   "addProduct": {
     "title": "Add product to the shop",
