--- a/src/translations/fr/translation.json
+++ b/src/translations/fr/translation.json
@@ -236,6 +236,9 @@
         "success":"Statut mis à jour avec succès",
         "failed":"Une erreur est survenue lors de la mise à jour du statut"
       }
+    },
+    "subOrders":{
+      "title":"Statut de chaque magasin"
     }
   },
   "analytics":{
