revert last change

--- a/src/translations/en/translation.json
+++ b/src/translations/en/translation.json
@@ -7,7 +7,7 @@
   },
   "login": {
     "email": {
-      "title" : "Username",
+      "title" : "Email or Username",
       "placeholder":"Enter your login"
     },
     "password": {
