--- a/src/translations/fr/translation.json
+++ b/src/translations/fr/translation.json
@@ -7,7 +7,7 @@
   },
   "login":{
     "email": {
-      "title" : "Nom d'utilisateur",
+      "title" : "Courriel ou nom utilisateur",
       "placeholder":"Entrez votre identifiant"
     },
     "password": {
